--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 </div>
                 <nav>
                     <ul>
-                        <li>Home</li>
+                        <li> <a href = "https://lisa-yamada.github.io/">Home</a></li>
                         <li>Portfolio</li>
                         <li>Resume</li>
                         <li>About</li>
