--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
                 </div>
                 <nav>
                     <ul>
-                        <li> <a href = "https://lisa-yamada.github.io/">Home</a></li>
-                        <li>Portfolio</li>
+                        <li><a href = "https://lisa-yamada.github.io/">Home</a></li>
+                        <li><a href = "https://lisa-yamada.github.io/">Portfolio</a></li>
                         <li>Resume</li>
                         <li>About</li>
                     </ul>
