--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
             ul li:hover {
                 color: #EF8B3F; /*Nice orange shade*/
             }
+            a {
+                text-decoration: none;
+            }
+            a:active {
+                text-decoration: none;
+            }
             /*Typewriter effect*/
             .typewriter h1 {
                 /*font-family: 'Spectral', serif;*/
