--- a/index.html
+++ b/index.html
@@ -49,10 +49,12 @@
                 color: #EF8B3F; /*Nice orange shade*/
             }
             a.one:link {
+                color: #F8DD74; /*Soft yellow color*/
                 text-decoration: none;
                 font-size: 20px;
             }
             a.one:visited {
+                color: #F8DD74; /*Soft yellow color*/
                 text-decoration: none;
             }
             a.one:hover {
@@ -60,6 +62,7 @@
                 color: #EF8B3F;
             }
             a.one:active {
+                color: #F8DD74; /*Soft yellow color*/
                 text-decoration: none;
             }
             /*Typewriter effect*/
