--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
         <meta charset="UTF-8">
         <style>
             /*Import statements for fonts*/
+            @import url('https://fonts.googleapis.com/css2?family=Spectral:wght@600&display=swap');
             @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@800&display=swap');
             @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap');
             @import url('https://fonts.googleapis.com/css2?family=Lora:wght@500&display=swap');
-            /*Body Formatting*/
             body {
                 display: flex;
                 background-color: #4A61E3; /*nice bold blue color*/
@@ -49,12 +49,10 @@
                 color: #EF8B3F; /*Nice orange shade*/
             }
             a.one:link {
-                color: #F8DD74; /*Soft yellow color*/
                 text-decoration: none;
                 font-size: 20px;
             }
             a.one:visited {
-                color: #F8DD74; /*Soft yellow color*/
                 text-decoration: none;
             }
             a.one:hover {
@@ -62,11 +60,11 @@
                 color: #EF8B3F;
             }
             a.one:active {
-                color: #F8DD74; /*Soft yellow color*/
                 text-decoration: none;
             }
             /*Typewriter effect*/
             .typewriter h1 {
+                /*font-family: 'Spectral', serif;*/
                 margin-left: 20px;
                 font-family: 'Rubik', sans-serif;
                 color: #EF8B3F; /*Nice orange shade*/
@@ -93,7 +91,7 @@
                 from, to { border-color: transparent }
                 50% { border-color: orange; }
             }
-            /*Buttons*/
+            /*Button*/
             .button {
                 margin-left: 20px;
                 margin-top: 20px;
