--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
         <meta charset="UTF-8">
         <style>
             /*Import statements for fonts*/
-            @import url('https://fonts.googleapis.com/css2?family=Spectral:wght@600&display=swap');
             @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@800&display=swap');
             @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap');
             @import url('https://fonts.googleapis.com/css2?family=Lora:wght@500&display=swap');
@@ -38,14 +37,14 @@
             .logo img {
                 float: left;
             }
-            ul.navi,ul.navi{
+            ul.navi,li.navi{
                 display: inline-block;
                 padding: 10px;
                 font-size: 20px;
                 color: #F8DD74; /*Soft yellow color*/
                 font-family: 'Abril Fatface', cursive;
             }
-            ul.navi:hover,ul.navi:hover {
+            ul.navi:hover,li.navi:hover {
                 color: #EF8B3F; /*Nice orange shade*/
             }
             a.one:link {
