--- a/index.html
+++ b/index.html
@@ -37,21 +37,23 @@
             .logo img {
                 float: left;
             }
-            ul.navi,li.navi{
+            ul li{
                 display: inline-block;
                 padding: 10px;
                 font-size: 20px;
                 color: #F8DD74; /*Soft yellow color*/
                 font-family: 'Abril Fatface', cursive;
             }
-            ul.navi:hover,li.navi:hover {
+            ul:hover li:hover {
                 color: #EF8B3F; /*Nice orange shade*/
             }
             a.one:link {
+                color: #F8DD74; /*Soft yellow color*/
                 text-decoration: none;
                 font-size: 20px;
             }
             a.one:visited {
+                color: #F8DD74; /*Soft yellow color*/
                 text-decoration: none;
             }
             a.one:hover {
@@ -59,6 +61,7 @@
                 color: #EF8B3F;
             }
             a.one:active {
+                color: #F8DD74; /*Soft yellow color*/
                 text-decoration: none;
             }
             /*Typewriter effect*/
@@ -136,11 +139,11 @@
                 <div class = "logo">
                 </div>
                 <nav>
-                    <ul class="navi">
-                        <li class="navi"><a class="one" href = "index.html">Home</a></li>
-                        <li class="navi"><a class="one" href = "portfolio.html">Portfolio</a></li>
-                        <li class="navi"><a class="one" href = "https://docs.google.com/document/d/1getEwSvK5w0QJBUtlsKW05TpuxYQgao6ncmhcETSGH0/edit?usp=sharing">Resume</a></li>
-                        <li class="navi"><a class="one" href = "about.html">About</a></li>
+                    <ul>
+                        <li><a class="one" href = "index.html">Home</a></li>
+                        <li><a class="one" href = "portfolio.html">Portfolio</a></li>
+                        <li><a class="one" href = "https://docs.google.com/document/d/1getEwSvK5w0QJBUtlsKW05TpuxYQgao6ncmhcETSGH0/edit?usp=sharing">Resume</a></li>
+                        <li><a class="one" href = "about.html">About</a></li>
                     </ul>
                 </nav>
             </div>
