--- a/index.html
+++ b/index.html
@@ -47,20 +47,20 @@
             ul:hover li:hover {
                 color: #EF8B3F; /*Nice orange shade*/
             }
-            a.one:link {
+            a:link {
                 color: #F8DD74; /*Soft yellow color*/
                 text-decoration: none;
                 font-size: 20px;
             }
-            a.one:visited {
+            a:visited {
                 color: #F8DD74; /*Soft yellow color*/
                 text-decoration: none;
             }
-            a.one:hover {
+            a:hover {
                 text-decoration: none;
                 color: #EF8B3F;
             }
-            a.one:active {
+            a:active {
                 color: #F8DD74; /*Soft yellow color*/
                 text-decoration: none;
             }
@@ -140,10 +140,10 @@
                 </div>
                 <nav>
                     <ul>
-                        <li><a class="one" href = "index.html">Home</a></li>
-                        <li><a class="one" href = "portfolio.html">Portfolio</a></li>
-                        <li><a class="one" href = "https://docs.google.com/document/d/1getEwSvK5w0QJBUtlsKW05TpuxYQgao6ncmhcETSGH0/edit?usp=sharing">Resume</a></li>
-                        <li><a class="one" href = "about.html">About</a></li>
+                        <li><a href = "index.html">Home</a></li>
+                        <li><a href = "portfolio.html">Portfolio</a></li>
+                        <li><a href = "https://docs.google.com/document/d/1getEwSvK5w0QJBUtlsKW05TpuxYQgao6ncmhcETSGH0/edit?usp=sharing">Resume</a></li>
+                        <li><a href = "about.html">About</a></li>
                     </ul>
                 </nav>
             </div>
