--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <link rel="stylesheet" type="text/css" href="./style.css">
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <style>
             /*Import statements for fonts*/
             @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@800&display=swap');
@@ -130,6 +132,26 @@
             h2:hover {
                 color: #4CAF50; /* Green */
             }
+            /*Social Media Buttons*/
+            .fa {
+                padding: 20px;
+                font-size: 30px;
+                width: 30px;
+                text-decoration: none;
+                margin: 5px 2px;
+                border-radius: 50%;
+            }
+            .fa:hover {
+                opacity: 0.7;
+            }
+            .fa-linkedin {
+                background: #007bb5;
+                color: white;
+            }
+            .fa-instagram {
+                background: #FFDC80;
+                color: white;
+            }
         </style>
     </head>
     
@@ -174,6 +196,10 @@
                 <a href="excellence.html"><h2>Excellence: The Easy Animator</h2></a>
                 <a href="chrome.html"><h2>Chrome Application</h2></a>
             </div>
+            <br/>
+            <br/>
+            <a href="#" class="fa fa-linkedin"></a>
+            <a href="#" class="fa fa-instagram"></a>
         </div>
     </body>
 </html>
