--- a/index.html
+++ b/index.html
@@ -139,18 +139,31 @@
                 width: 30px;
                 text-decoration: none;
                 margin: 5px 2px;
+                text-align: center;
                 border-radius: 50%;
             }
             .fa:hover {
                 opacity: 0.7;
             }
             .fa-linkedin {
-                background: #007bb5;
+                margin-right: 5px;
+                float: right;
+                margin-bottom: 20px;
+                background: #EA5C5B;
                 color: white;
             }
             .fa-instagram {
-                background: #FFDC80;
+                margin-right: 20px;
+                float: right;
+                background: #EA5C5B;
                 color: white;
+            }
+            p {
+                color: #EA5C5B;
+                font-family: 'Rubik', sans-serif;
+                float: left;
+                margin-left: 20px;
+                margin-bottom: 20px;
             }
         </style>
     </head>
@@ -197,9 +210,10 @@
                 <a href="chrome.html"><h2>Chrome Application</h2></a>
             </div>
             <br/>
+            <a href="https://www.instagram.com/lisaayamada/" class="fa fa-instagram"></a>
+            <a href="https://www.linkedin.com/in/lisa-yamada-350014202/" class="fa fa-linkedin"></a>
             <br/>
-            <a href="#" class="fa fa-linkedin"></a>
-            <a href="#" class="fa fa-instagram"></a>
+            <p>Website by Lisa Yamada</p>
         </div>
     </body>
 </html>
