--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@
                 <a href="chrome.html"><h2>Chrome Application</h2></a>
             </div>
             <br/>
-            <a href="https://www.instagram.com/lisaayamada/" class="fa fa-instagram"></a>
-            <a href="https://www.linkedin.com/in/lisa-yamada-350014202/" class="fa fa-linkedin"></a>
+            <a href="https://www.instagram.com/lisaayamada/" target ="_blank" class="fa fa-instagram"></a>
+            <a href="https://www.linkedin.com/in/lisa-yamada-350014202/" target ="_blank" class="fa fa-linkedin"></a>
             <br/>
             <p>Website by Lisa Yamada</p>
         </div>
