--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                     <ul>
                         <li><a href = "index.html">Home</a></li>
                         <li><a href = "portfolio.html">Portfolio</a></li>
-                        <li><a href = "https://docs.google.com/document/d/1getEwSvK5w0QJBUtlsKW05TpuxYQgao6ncmhcETSGH0/edit?usp=sharing">Resume</a></li>
+                        <li><a href = "https://docs.google.com/document/d/1getEwSvK5w0QJBUtlsKW05TpuxYQgao6ncmhcETSGH0/edit?usp=sharing" target ="_blank">Resume</a></li>
                         <li><a href = "about.html">About</a></li>
                     </ul>
                 </nav>
