--- a/portfolio.html
+++ b/portfolio.html
@@ -112,8 +112,8 @@
                 <nav>
                     <ul>
                         <li><a href = "index.html">Home</a></li>
-                        <li>Portfolio</li>
-                        <li><a href = "https://docs.google.com/document/d/1getEwSvK5w0QJBUtlsKW05TpuxYQgao6ncmhcETSGH0/edit?usp=sharing">Resume</a></li>
+                        <li><a href = "portfolio.html">Portfolio</a></li>
+                        <li><a href = "https://docs.google.com/document/d/1getEwSvK5w0QJBUtlsKW05TpuxYQgao6ncmhcETSGH0/edit?usp=sharing" target="_blank">Resume</a></li>
                         <li><a href = "about.html">About</a></li>
                     </ul>
                 </nav>
