--- a/minesweeper.html
+++ b/minesweeper.html
@@ -47,6 +47,7 @@
                 color: #EF8B3F; /*Nice orange shade*/
             }
             a:link {
+                color: #F8DD74; /*Soft yellow color*/
                 text-decoration: none;
                 font-size: 20px;
             }
@@ -57,6 +58,7 @@
                 color: #EF8B3F;
             }
             a:active {
+                color: #F8DD74; /*Soft yellow color*/
                 text-decoration: none;
             }
             /*Header*/
