--- a/index.html
+++ b/index.html
@@ -204,9 +204,9 @@
             <br/>
             <br/>
             <div id="myWorks">
-                <a href="minesweeper.html"><h2>Minesweeper</h2></a>
-                <a href="owlsnest.html"><h2>Owl's Nest</h2></a>
-                <a href="excellence.html"><h2>Excellence: The Easy Animator</h2></a>
+                <a href="minesweeper/minesweeper.html"><h2>Minesweeper</h2></a>
+                <a href="owlsnest/owlsnest.html"><h2>Owl's Nest</h2></a>
+                <a href="excellence/excellence.html"><h2>Excellence: The Easy Animator</h2></a>
                 <a href="chrome.html"><h2>Chrome Application</h2></a>
             </div>
             <br/>
