--- a/minesweeper/minesweeper.html
+++ b/minesweeper/minesweeper.html
@@ -84,7 +84,7 @@
                 <nav>
                     <ul>
                         <li><a href = "index.html">Home</a></li>
-                        <li><a href = "portfolio.html">Portfolio</a></li>
+                        <li><a href = "main/portfolio.html">Portfolio</a></li>
                         <li><a href = "https://docs.google.com/document/d/1getEwSvK5w0QJBUtlsKW05TpuxYQgao6ncmhcETSGH0/edit?usp=sharing" target = "_blank">Resume</a></li>
                         <li><a href = "about.html">About</a></li>
                     </ul>
