--- a/portfolio.html
+++ b/portfolio.html
@@ -123,19 +123,19 @@
             <div class="row">
                 <div class="column">
                     <div class="card">
-                        <a href="minesweeper.html"><h3>Minesweeper</h3></a>
+                        <a href="minesweeper/minesweeper.html"><h3>Minesweeper</h3></a>
                         <p>Based on the cult-favorite game.</p>
                     </div>
                 </div>
                 <div class="column">
                     <div class="card">
-                        <a href="owlsnest.html"><h3>Owl's Nest</h3></a>
+                        <a href="owlsnest/owlsnest.html"><h3>Owl's Nest</h3></a>
                         <p style="font-size: 10px;">Community hub for the upper division of the Agnes Irwin School.</p>
                     </div>
                 </div>
                 <div class="column">
                     <div class="card">
-                        <a href="excellence.html"><h3>Excellence</h3></a>
+                        <a href="excellence/excellence.html"><h3>Excellence</h3></a>
                         <p>Animation viewer and editor.</p>
                     </div>
                 </div>
