--- a/about/about.html
+++ b/about/about.html
@@ -165,7 +165,7 @@
                         <li><a href = "/index.html">Home</a></li>
                         <li><a href = "/portfolio.html">Portfolio</a></li>
                         <li><a href = "https://docs.google.com/document/d/1getEwSvK5w0QJBUtlsKW05TpuxYQgao6ncmhcETSGH0/edit?usp=sharing" target ="_blank">Resume</a></li>
-                        <li><a href = "about/about.html">About</a></li>
+                        <li><a href = "about.html">About</a></li>
                     </ul>
                 </nav>
             </div>
