--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
             <a href="https://www.instagram.com/lisaayamada/" target ="_blank" class="fa fa-instagram"></a>
             <a href="https://www.linkedin.com/in/lisa-yamada-350014202/" target ="_blank" class="fa fa-linkedin"></a>
             <br/>
-            <p>Coded and Designed by Lisa Yamada</p>
+            <p>Coded by Lisa Yamada</p>
         </div>
     </body>
 </html>
