--- a/index.html
+++ b/index.html
@@ -229,7 +229,8 @@
                 <a href="minesweeper/minesweeper.html"><h2>Minesweeper</h2></a>
                 <a href="owlsnest/owlsnest.html"><h2>Owl's Nest</h2></a>
                 <a href="excellence/excellence.html"><h2>Excellence: The Easy Animator</h2></a>
-                <a href="chrome.html"><h2>Chrome Application</h2></a>
+                <a href="covid/covid.html"><h2>COVID-19 Vaccine Allocation Research</h2></a>
+                #<a href="chrome.html"><h2>Chrome Application</h2></a>
             </div>
             <br/>
             <a href="https://www.instagram.com/lisaayamada/" target ="_blank" class="fa fa-instagram"></a>
