--- a/portfolio.html
+++ b/portfolio.html
@@ -141,7 +141,7 @@
                 </div>
                 <div class="column">
                     <div class="card">
-                        <a href="chrome.html"><h3>in progress...</h3></a>
+                        <a href="covid/covid.html"><h3>in progress...</h3></a>
                         <p>Come back soon!</p>
                     </div>
                 </div>
