--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
             }
             .fa-linkedin {
                 margin-right: 5px;
+                margin-bottom: 5px;
                 float: right;
                 margin-bottom: 20px;
                 background: #EA5C5B;
@@ -156,6 +157,7 @@
             }
             .fa-instagram {
                 margin-right: 20px;
+                margin-bottom: 5px;
                 float: right;
                 background: #EA5C5B;
                 color: white;
